 * Server Fix: Don't report temporary server bans as permanent. Thanks Bluestrings for reporting.
 * Server Fix: Properly convert between IPv4 and IPv6 when checking IP bans. Thanks Bluestrings for reporting.
 * Fix: Use proper measurements to decide on how much painting to do in a single step, hopefully preventing chugging caused by certain brushes.

2024-01-13 Version 2.2.0
 * Server Fix: Add --ssl-key-algorithm parameter to allow non-RSA SSL keys, defaulting to guessing the most common formats RSA and EC. Thanks Bluestrings for reporting.
 * Fix: Make pressure-less mode work with pens on Android. Thanks molluscdotgov for reporting.
 * Fix: Don't start dragging keyframes when they're moved only a minuscule amount. Thanks Meru for reporting.
 * Fix: Remove duplicate port from displayed network address when hosting under a non-default port. Thanks SadColor for reporting.
 * Fix: Keep focus on brush sliders when typing into them. Thanks MachKerman for reporting.
 * Server Feature: Allow setting web admin auth through DRAWPILESRV_WEB_ADMIN_AUTH environment variable. The --web-admin-auth parameter takes precedence.
 * Fix: Show the fill tool size limit rectangle even when the outline width is set to zero pixels. Thanks Blozzom for reporting.
 * Server Fix: Show an error message if listing on a certain server is not allowed.
 * Fix: Unlist sessions more reliably when terminating sessions hosted "on this computer". Thanks to Buch for helping figure this out.
 * Fix: Don't select a newly created layer when there's a default layer.
 * Fix: Give the timeline dock a sensible minimum height. Thanks Kink for reporting.
 * Fix: Don't exit the program in the pathological case of initiating a quit, being prompted to save, cancelling the save dialog and then saving again.
 * Fix: Properly update current layer fill source when switching layers.
 * Fix: Cap the number of threads used for parallel processing, because 128 core CPUs exist.